correzzione topBar